Updated z-indexes for dropdown overlap issue

--- a/team_project/css/global.css
+++ b/team_project/css/global.css
@@ -216,7 +216,7 @@ footer {
 .dropdown-wrap {
     position: relative;
     display: inline-block;
-    z-index: 1002;
+    z-index: 9999;
 }
 
 .dropdown-wrap:hover .dropdown-content {
@@ -238,14 +238,14 @@ footer {
 .dropdown {
 	position: relative;
 	display: inline-block;
-	z-index: 1002;
+	z-index: 9999;
 }
 
 /* SECONDARY NAVIGATION - Dropdown Content (Hidden by Default) */
 .dropdown-wrap,
 .dropdown {
 	position: relative;
-	z-index: 1002;
+	z-index: 9999;
 }
 
 .dropdown-content {
@@ -270,7 +270,7 @@ footer {
 
 /* SECONDARY NAVIGATION - Change color of dropdown links on hover */
 .dropdown-content a:hover {
-  background-color: #eee;
+	background-color: #eee;
 }
 
 /* SECONDARY NAVIGATION - Show the dropdown menu on hover */
